# lynklytics

./: Dockerfile  LICENSE  Procfile  README.md  requirements.txt
lynklytics/: pyproject.toml
lynklytics/apps/core/: admin.py  models.py  urls.py  views.py
lynklytics/apps/core/migrations/: 0001_initial.py
lynklytics/apps/core/templates/core/: base.html  global_stats.html  link_stats.html  my-links.html  shorten_form.html  shorten_success.html
lynklytics/config/: settings.py  urls.py
lynklytics/templates/accounts/: login.html
