[project]
name = "lynklytics"
version = "0.1.0"
description = ""
authors = [
    {name = "diego1996",email = "diego.asencio.cuellar@unillanos.edu.co"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "ua-parser (>=1.0.1,<2.0.0)",
    "user-agents (>=2.2.0,<3.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
